fix: remove pagination from categories
