# backend/doc/api.yaml
@@ -186,31 +186,15 @@ paths:
         - Admin Category
       summary: Get all categories
       description: Gets all categories
-      parameters:
-        - name: page
-          in: query
-          description: A page number within the paginated result set.
-          schema:
-            type: integer
-        - name: perPage
-          in: query
-          description: A page number within the paginated result set.
-          schema:
-            type: integer
       responses:
         200:
           description: Successful operation
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  meta:
-                    $ref: '#/components/schemas/Meta'
-                  data:
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/Category'
+                type: array
+                items:
+                  $ref: '#/components/schemas/Category'
     post:
       tags:
         - Admin Category
@@ -714,31 +698,15 @@ paths:
         - Public Categories
       summary: Get all categories
       description: Gets all categories
-      parameters:
-        - name: page
-          in: query
-          description: A page number within the paginated result set.
-          schema:
-            type: integer
-        - name: perPage
-          in: query
-          description: A page number within the paginated result set.
-          schema:
-            type: integer
       responses:
         200:
           description: Successful operation
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  meta:
-                    $ref: '#/components/schemas/Meta'
-                  data:
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/Category'
+                type: array
+                items:
+                  $ref: '#/components/schemas/Category'
   /categories/{slug}/posts:
     parameters:
       - name: slug
